fix hidden input creating inner scrollbars

--- a/src/components/common/Button.css
+++ b/src/components/common/Button.css
@@ -52,8 +52,7 @@
 }
 
 .react-paint-editor-button input {
-    position: absolute;
-    visibility: hidden;
+    display: none;
 }
 
 
